<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <groupId>com.netcracker.cloud</groupId>
    <artifactId>paas-mediation-integration-tests</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <modelVersion>4.0.0</modelVersion>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <skipIT>true</skipIT>
        <cloud-core-extension.version>8.4.3</cloud-core-extension.version>
        <cloud.core.security.utils.version>2.1.3</cloud.core.security.utils.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
        </dependency>

        <dependency>
            <groupId>com.netcracker.cloud.junit.cloudcore</groupId>
            <artifactId>cloud-core-extension</artifactId>
            <version>${cloud-core-extension.version}</version>
        </dependency>

        <dependency>
            <groupId>com.netcracker.cloud.security.core.utils</groupId>
            <artifactId>tls-utils</artifactId>
            <version>${cloud.core.security.utils.version}</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>2.0.16</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.12.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                    </argLine>
                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                    <skipTests>${skipIT}</skipTests>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <snapshots />
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:https://github.com/Netcracker/qubership-core-paas-mediation.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-core-paas-mediation.git
        </developerConnection>
        <url>https://github.com/Netcracker/qubership-core-paas-mediation</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/Netcracker/qubership-core-paas-mediation</url>
        </repository>
    </distributionManagement>

</project>